<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_title_list_impressoras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_list_dispos"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:gravity="center"
                    android:text="Selecione o dispositivo"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFF" />

                <ImageView
                    android:id="@+id/btn_reload_bluetooth"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_reload"
                    app:tint="@android:color/white" />

                <ProgressBar
                    android:id="@+id/reload_bluetooth"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:visibility="gone" />

            </GridLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/title_disabled"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:gravity="center"
            android:text="@string/title_bluetooth_disabled"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorErro" />

        <ListView
            android:id="@+id/devices_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:stackFromBottom="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#c0c0c0"
            android:padding="5dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/title_address"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/device_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textUri"
                android:lines="1">

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_connect" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scanLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:padding="5dp"
            android:visibility="gone">

            <Button
                android:id="@+id/scan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_timeline"
                android:text="@string/title_scan"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>