<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.zenitech.siacmobile.Principal"
    tools:showIn="@layout/activity_main">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <Button
                android:id="@+id/btn_vendas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/buttom_custom"
                android:onClick="vendas"
                android:text="@string/txt_btn_vendas"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/btn_contas_receber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/buttom_custom"
                android:onClick="contas_receber"
                android:text="@string/txt_btn_contas_receber"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/btn_relatorios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/buttom_custom"
                android:text="@string/txt_btn_relatorios" />

            <Button
                android:id="@+id/btnLoginFtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/buttom_custom"
                android:text="@string/txt_btn_enviar_bd" />

            <Button
                android:id="@+id/btnExcluirBanco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttom_custom"
                android:text="Excluir Banco"
                android:visibility="gone" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/llPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="16dp">

            <LinearLayout
                android:id="@+id/cv_venda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="65dp"
                    android:layout_height="65dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:tint="@color/icons"
                        app:srcCompat="@drawable/ic_notifications_active" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ATENÇAO"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Encontramos vendas que não foram finalizadas corretamente, clique aqui e saiba mais."
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="1dp"
        app:layout_anchor="@id/llPrincipal"
        app:layout_anchorGravity="bottom">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:visibility="gone"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="© ZENITECH" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
